# vl-mapper

./: .dockerignore  .gitignore  Dockerfile  README.md  install_onnx_cpp.sh  requirements.txt
config/: localization2D.yaml
scripts/: check_mic.py  export_yoloworld.py
src/perception/openai_vision/: package.xml  setup.cfg  setup.py
src/perception/openai_vision/openai_vision/: openai_vision_node.py
src/perception/openai_vision/prompts/: default_prompt.txt  default_system.txt
src/perception/tokenizer/: package.xml  setup.cfg  setup.py
src/perception/tokenizer/tokenizer/: tokenizer_node.py
src/perception/vl_mapper/: CMakeLists.txt  package.xml
src/perception/vl_mapper/include/vl_mapper/: mapper_utils.hpp  vl_mapper_node.hpp
src/perception/vl_mapper/src/: vl_mapper_node.cpp
src/perception/vl_mapper_interface/: CMakeLists.txt  package.xml
src/perception/vl_mapper_interface/action/: Detect.action
src/perception/vl_mapper_interface/msg/: Labels.msg
src/perception/vl_mapper_interface/srv/: DetectAtStamp.srv  TokenizeLabels.srv
src/perception/yolo_onnx/: CMakeLists.txt  package.xml
src/perception/yolo_onnx/include/yolo_onnx/: onnx_utils.hpp  yolo_onnx_node.hpp
src/perception/yolo_onnx/src/: yolo_onnx_node.cpp
src/perception/yolo_world/: package.xml  setup.py
src/perception/yolo_world/yolo_world/: yolo_world_node.py
src/plan/openai_detections/: openai_detections_node.py  package.xml  setup.cfg  setup.py
src/plan/openai_detections/prompts/: default_prompt.txt  default_system.txt
src/utility/gui_instruction/: package.xml  setup.cfg  setup.py
src/utility/gui_instruction/gui_instruction/: gui_instruction_node.py
src/utility/openai_base/: package.xml  setup.cfg  setup.py
src/utility/openai_base/openai_base/: __init__.py  openai_base_node.py
src/utility/vln_bringup/: CMakeLists.txt  package.xml
src/utility/vln_bringup/launch/: bringup.launch.py
src/utility/voice_instruction/: package.xml  setup.cfg  setup.py
src/utility/voice_instruction/voice_instruction/: voice_instruction_node.py
