<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>vl_mapper</name>
    <version>0.0.0</version>
    <description>TODO: Package description</description>
    <maintainer email="josua.lindemann@outlook.de">Josua Lindemann</maintainer>
    <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>sensor_msgs</depend>
    <depend>vision_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>message_filters</depend>
    <depend>cv_bridge</depend>
    <depend>pcl_ros</depend>
    <depend>tf2_eigen</depend>
    <depend>vl_mapper_interface</depend>
    <depend>eigen</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
